# python-project-52

./: README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: main.yml
task_manager/: settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_alter_label_name.py
task_manager/locale/en/LC_MESSAGES/: django.po
task_manager/locale/ru/LC_MESSAGES/: django.po
task_manager/statuses/: views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_tasklabel_task_label.py  0003_alter_task_author_alter_task_description_and_more.py  0004_alter_task_author_alter_task_label_alter_task_name_and_more.py  0006_alter_task_label.py  0007_alter_task_label.py  0008_remove_task_label_task_labels.py  0009_remove_task_task_performer_task_executor.py  0010_alter_task_executor.py  0011_alter_task_status.py  0012_alter_task_executor_alter_task_status.py  0013_alter_task_executor.py  0014_alter_task_executor.py  0015_alter_task_executor.py
task_manager/templates/: base.html  footer.html  form.html  form_delete.html  index.html  login.html  navbar.html
task_manager/templates/labels/: create.html  delete.html  update.html
task_manager/templates/statuses/: delete.html
task_manager/templates/tasks/: create.html  delete.html  update.html
task_manager/templates/users/: create.html  delete.html  update.html
task_manager/users/: views.py
task_manager/users/migrations/: 0001_initial.py
