[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task manager"
authors = ["MKashtanov <MKashtanov@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
